--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
 
-    <activity android:name=".View.MainActivity">
+    <activity android:name="org.tomoaki.coursehelper.View.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
