--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "com.example.coursehelper"
+        applicationId "com.tomoaki.coursehelper"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
