--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,19 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "com.google.android.material:material:1.0.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    // https://github.com/thoughtbot/expandable-recycler-view
+    implementation 'com.thoughtbot:expandablerecyclerview:1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.0.rc1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05"
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
     implementation 'com.google.code.gson:gson:2.8.5'
+    // https://guides.codepath.com/android/Using-Parceler // https://github.com/johncarl81/parceler
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 }
